[project]
name = "llvm-flow-api"
version = "0.1.0"
requires-python = ">=3.12"
description = "Backend for llvm-flow demo"
dependencies = [
    "fastapi[standard]>=0.115.12,<0.116.0",
    "sqlalchemy>=2.0.41",
    "pydantic-settings==2.9.1",
    "pydantic==2.11.4",
    "alembic>=1.16.1",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "pendulum>=3.0.0",
    "nanoid>=2.0.0",
    "boto3>=1.38.21",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]
line-length = 79

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
extend-select = ["E501"]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "UP015"  # Allow using "r" in open() context manager
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
